página principal creada y secundaria en proceso

--- a/Pages/quiz.html
+++ b/Pages/quiz.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Geography Quiz</title>
+    <title>Geography Quiz1</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="author" content="Miguel Barbero">
     <meta name="description" content="Plantilla simple HTML5">
 
-    <link rel="shortcut icon" href="./Assets/globe.png" type="image/x-icon">
-    <link rel="stylesheet" href="./Css/styles.css">
-    <script defer src="scripts.js"></script>
+    <link rel="shortcut icon" href="../Assets/globe.png" type="image/x-icon">
+    <link rel="stylesheet" href="../Css/quiz.css">
+    <script defer src="../scripts.js"></script>
 </head>
-<body id="home">
+<body id="testPage">
     
 </body>
 </html>
