página terminada y bugs arreglados

--- a/Pages/score.html
+++ b/Pages/score.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Plantilla simple HTML5">
 
     <link rel="shortcut icon" href="../Assets/globe.png" type="image/x-icon">
-    <link rel="stylesheet" href="../Css/quiz.css">
+    <link rel="stylesheet" href="../Css/score.css">
     <script defer src="../scripts.js"></script>
 </head>
 <body id="solPage">
