modificada estructura para que funcione en Safari

--- a/Pages/quiz.html
+++ b/Pages/quiz.html
@@ -10,7 +10,7 @@
 
     <link rel="shortcut icon" href="../Assets/globe.png" type="image/x-icon">
     <link rel="stylesheet" href="../Css/quiz.css">
-    <script defer src="../scripts.js"></script>
+    <script defer src="../JS/quiz.js"></script>
 </head>
 <body id="testPage">
     
