--- a/Pages/score.html
+++ b/Pages/score.html
@@ -10,7 +10,7 @@
 
     <link rel="shortcut icon" href="../Assets/globe.png" type="image/x-icon">
     <link rel="stylesheet" href="../Css/score.css">
-    <script defer src="../scripts.js"></script>
+    <script defer src="../JS/score.js"></script>
 </head>
 <body id="solPage">
     
