arreglos para cumplir las instrucciones

--- a/Pages/quiz.html
+++ b/Pages/quiz.html
@@ -9,8 +9,8 @@
     <meta name="description" content="Plantilla simple HTML5">
 
     <link rel="shortcut icon" href="../Assets/globe.png" type="image/x-icon">
-    <link rel="stylesheet" href="../Css/quiz.css">
-    <script defer src="../JS/quiz.js"></script>
+    <link rel="stylesheet" href="../Css/styles.css">
+    <script defer src="../JS/script.js"></script>
 </head>
 <body id="testPage">
     
