--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="shortcut icon" href="./Assets/globe.png" type="image/x-icon">
     <link rel="stylesheet" href="./Css/styles.css">
-    <script defer src="./JS/index.js"></script>
+    <script defer src="./JS/script.js"></script>
 </head>
 <body id="home">
     
