--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="author" content="Miguel Barbero">
     <meta name="description" content="Plantilla simple HTML5">
 
-    <link rel="shortcut icon" href="./Assets/globe.png" type="image/x-icon">
-    <link rel="stylesheet" href="./Css/styles.css">
+    <link rel="shortcut icon" href="./assets/globe.png" type="image/x-icon">
+    <link rel="stylesheet" href="./css/styles.css">
     <script defer src="./js/script.js"></script>
 </head>
 <body id="home">
